<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android ="http://schemas.android.com/apk/res/android"
    android:layout_width= "match_parent"
    android:layout_height= "match_parent" 
    android:orientation= "vertical" >
     
    <TextView
        android:layout_width= "match_parent" 
        android:layout_height= "wrap_content"
        android:text= "@string/name" />
    
    <EditText        
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
        
    <Button
        android:id="@+id/view_message_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_view_message" />
    
   <TextView
       	android:id="@+id/show_message_text"
        android:layout_width= "wrap_content"
        android:layout_height= "wrap_content"
        android:text= "@string/hello_message"         
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:visibility="invisible" />
    
</LinearLayout>